--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 h1{
   color:#0d0d0d;font-size:38px;line-height: 1.5; font-family: 'Hiragino sans W7';
@@ -94,6 +95,7 @@ p{
   color: #212121;font-size: 17px;line-height: 2.0;font-weight: normal; font-family: 'Hiragino sans W3'; font-weight: 300;
   margin-bottom: 20px;
 }
+
 @media(max-width:872px;min-width:768px){
   .title{
     max-width: 680px;
@@ -150,7 +152,7 @@ p{
     max-width:680px;
     display: block;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 30;
     margin-left: 30px;
     margin-right: 30px;
   }
