--- a/style2.css
+++ b/style2.css
@@ -77,6 +77,7 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 40px;
 }
 h1{
   color:#0d0d0d;font-size:38px;line-height: 1.5; font-family: 'Hiragino sans W7';
@@ -150,7 +151,7 @@ p{
     max-width:680px;
     display: block;
     margin-top: 0;
-    margin-bottom: 0;
+    margin-bottom: 30px;
     margin-left: 30px;
     margin-right: 30px;
   }
